# malexport

./: .gitignore  README.md  malexport.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  mypy.ini  mypy.yaml
malexport/: __init__.py  __main__.py  common.py  log.py  manual_episode.py  paths.py
malexport/exporter/: __init__.py  account.py  api_list.py  driver.py  episode_history.py  export_downloader.py  forum.py  friends.py  history.py  list_type.py  mal_list.py  mal_session.py  messages.py
malexport/mal/: account.py  driver.py  episode_history.py  forum.py  list_type.py  mal_session.py
malexport/parse/: __init__.py  api_list.py  combine.py  common.py  forum.py  friends.py  history.py  list.py  mal_list.py  messages.py  recover_deleted_entries.py  xml.py
malexport/utils/: compare_lists.py
scripts/: README.txt  anime_length.py  auth_repl.py  bot_sources.sh  episode_durations.py  hpi_mal_create_history  merge_history  to_anilist.py  update_friends.sh
