[metadata]
name = malexport
version = 0.1.4
description = backs up info from your MAL account
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/seanbreckenridge/malexport"
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = anime, data, webscraping

[options]
packages = find:
install_requires =
    PyYaml
    backoff>=2.0.0
    click>=8.0
    cssselect
    dateparser
    gitpython
    logzero
    lxml
    more-itertools
    requests
    selenium>=4.10.0
    simplejson
python_requires = >=3.8
include_package_data = True

[options.packages.find]
include =
    malexport
    malexport.utils
    malexport.parse
    malexport.exporter

[options.extras_require]
manual =
    autotui
    pyfzf-iter
recover =
    hpi
testing =
    flake8
    mypy

[options.package_data]
malexport = py.typed

[flake8]
ignore = E501,E402,W503,E266,E203

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
check_untyped_defs = True
namespace_packages = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
